boutique-helm/boutique/templates/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: boutique

  annotations:
    kubernetes.io/ingress.class: azure/application-gateway

spec:
  rules:
  - host: api.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productcatalogservice
            port:
              number: 3550
