boutique-helm/boutique/templates/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway

spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
